Actions
Bug #18171
closed`Marshal` ignores `Hash#compare_by_identity`
Bug #18171:
`Marshal` ignores `Hash#compare_by_identity`
Actions
Added by nobu (Nobuyoshi Nakada) about 5 years ago. Updated almost 5 years ago.
Applied in changeset git|d08721465850a6e6954b43bbfebe2ed5a7256dec.
Restore Hash#compare_by_identity mode [Bug #18171]