Restore Hash#compare_by_identity mode [Bug #18171]